feat: new Maven section (#5232)