@@ -1,198 +1,70 @@
-[//]: # (title: Maven)
+[//]: # (title: Compile and package a Maven project)
 
-Maven is a build system that you can use to build and manage any Java-based project.
+You can set up your Maven project to compile Kotlin-only or mixed Kotlin and Java sources, configure the Kotlin compiler,
+specify compiler options, and package your application into JARs.
 
-## Configure and enable the plugin
+## Configure source code compilation
 
-The `kotlin-maven-plugin` compiles Kotlin sources and modules. Currently, only Maven v3 is supported.
+To ensure that your source code is compiled correctly, adjust project configuration.
+Your Maven project can be set up to compile [Kotlin-only sources](#compile-kotlin-only-sources) or a combination
+of [Kotlin and Java sources](#compile-kotlin-and-java-sources).
 
-In your `pom.xml` file, define the version of Kotlin you want to use in the `kotlin.version` property:
+### Compile Kotlin-only sources
 
-```xml
-<properties>
-    <kotlin.version>%kotlinVersion%</kotlin.version>
-</properties>
-```
+To compile your Kotlin source code:
 
-To enable `kotlin-maven-plugin`, update your `pom.xml` file:
+1. Specify the source directories in the `<build>` section:
 
-```xml
-<plugins>
-    <plugin>
-        <artifactId>kotlin-maven-plugin</artifactId>
-        <groupId>org.jetbrains.kotlin</groupId>
-        <version>%kotlinVersion%</version>
-    </plugin>
-</plugins>
-```
+    ```xml
+    <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+    </build>
+    ```
 
-### Use JDK 17
+2. Ensure that the Kotlin Maven plugin is applied:
 
-To use JDK 17, in your `.mvn/jvm.config` file, add:
+    ```xml
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+    
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+    
+                    <execution>
+                        <id>test-compile</id>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    ```
 
-```none
---add-opens=java.base/java.lang=ALL-UNNAMED
---add-opens=java.base/java.io=ALL-UNNAMED
-```
-
-## Declare repositories
-
-By default, the `mavenCentral` repository is available for all Maven projects. To access artifacts in other repositories,
-specify the ID and URL of each repository in the `<repositories>` element:
-
-```xml
-<repositories>
-    <repository>
-        <id>spring-repo</id>
-        <url>https://repo.spring.io/release</url>
-    </repository>
-</repositories>
-```
-
-> If you declare `mavenLocal()` as a repository in a Gradle project, you may experience problems when switching 
-> between Gradle and Maven projects. For more information, see [Declare repositories](gradle-configure-project.md#declare-repositories).
->
-{style="note"}
-
-## Set dependencies
-
-To add a dependency on a library, include it in the `<dependencies>` element:
-
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.jetbrains.kotlinx</groupId>
-        <artifactId>kotlinx-serialization-json</artifactId>
-        <version>%serializationVersion%</version>
-    </dependency>
-</dependencies>
-```
-
-### Dependency on the standard library
-
-Kotlin has an extensive standard library that you can use in your applications.
-To use the standard library in your project, add the following dependency to your `pom.xml` file:
-
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.jetbrains.kotlin</groupId>
-        <artifactId>kotlin-stdlib</artifactId>
-        <!-- Uses the kotlin.version property 
-            specified in <properties/>: --> 
-        <version>${kotlin.version}</version>
-    </dependency>
-</dependencies>
-```
-
-> If you're targeting JDK 7 or 8 with Kotlin versions older than:
-> * 1.8, use `kotlin-stdlib-jdk7` or `kotlin-stdlib-jdk8`, respectively.
-> * 1.2, use `kotlin-stdlib-jre7` or `kotlin-stdlib-jre8`, respectively.
->
-{style="note"}
-
-### Dependencies on test libraries
-
-If your project uses [Kotlin reflection](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.reflect.full/index.html)
-or testing frameworks, add the relevant dependencies.
-Use `kotlin-reflect` for the reflection library, and `kotlin-test` and `kotlin-test-junit`
-for the testing libraries.
-
-For example:
-
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.jetbrains.kotlin</groupId>
-        <artifactId>kotlin-reflect</artifactId>
-        <version>${kotlin.version}</version>
-    </dependency>
-</dependencies>
-```
-
-### Dependency on a kotlinx library
-
-Depending on the kotlinx library, you can either add the base artifact name or the name with a `-jvm` suffix. Refer to 
-the library's README file on [klibs.io](https://klibs.io/).
-
-For example, to add a dependency on `kotlinx.coroutines`:
-
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.jetbrains.kotlinx</groupId>
-        <artifactId>kotlinx-coroutines-core</artifactId>
-        <version>%coroutinesVersion%</version>
-    </dependency>
-</dependencies>
-```
-
-To add a dependency on `kotlinx-datetime`:
-
-```xml
-<dependencies>
-    <dependency>
-        <groupId>org.jetbrains.kotlinx</groupId>
-        <artifactId>kotlinx-datetime-jvm</artifactId>
-        <version>%dateTimeVersion%</version>
-    </dependency>
-</dependencies>
-```
-
-## Compile Kotlin-only source code
-
-To compile source code, specify the source directories in the `<build>` tag:
-
-```xml
-<build>
-    <sourceDirectory>src/main/kotlin</sourceDirectory>
-    <testSourceDirectory>src/test/kotlin</testSourceDirectory>
-</build>
-```
-
-The Kotlin Maven Plugin needs to be referenced to compile the sources:
-
-```xml
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-maven-plugin</artifactId>
-            <version>${kotlin.version}</version>
-
-            <executions>
-                <execution>
-                    <id>compile</id>
-                    <goals>
-                        <goal>compile</goal>
-                    </goals>
-                </execution>
-
-                <execution>
-                    <id>test-compile</id>
-                    <goals>
-                        <goal>test-compile</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
-```
-
-Starting from Kotlin 1.8.20, you can replace the whole `<executions>` element above with `<extensions>true</extensions>`. 
-Enabling extensions automatically adds the `compile`, `test-compile`, `kapt`, and `test-kapt` executions to your build, 
-bound to their appropriate [lifecycle phases](https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html). 
+You can replace the whole `<executions>` section above with `<extensions>true</extensions>`.
+Enabling extensions automatically adds the `compile`, `test-compile`, `kapt`, and `test-kapt` executions to your build,
+bound to their appropriate [lifecycle phases](https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html).
 If you need to configure an execution, you need to specify its ID. You can find an example of this in the next section.
 
-> If several build plugins overwrite the default lifecycle and you have also enabled the `extensions` option, the last plugin in 
+> If several build plugins overwrite the default lifecycle and you have also enabled the `extensions` option, the last plugin in
 > the `<build>` section has priority in terms of lifecycle settings. All earlier changes to lifecycle settings are ignored.
-> 
+>
 {style="note"}
 
 <!-- The following header is used in the Mari link service. If you wish to change it here, change the link there too -->
 
-## Compile Kotlin and Java sources
+### Compile Kotlin and Java sources
 
 To compile a project with both Kotlin and Java source files, make sure the Kotlin compiler runs before the Java compiler.
 The Java compiler can't see Kotlin declarations until they are compiled into `.class` files.
@@ -361,7 +233,9 @@ For more details on how Maven handles plugin executions,
 see [Guide to default plugin execution IDs](https://maven.apache.org/guides/mini/guide-default-execution-ids.html) in
 the official Maven documentation.
 
-## Configure Kotlin compiler execution strategy
+## Configure Kotlin compiler
+
+### Choose execution strategy
 
 The _Kotlin compiler execution strategy_ defines where the Kotlin compiler runs. There are two available strategies:
 
@@ -381,7 +255,7 @@ property in your `pom.xml` file:
 
 Regardless of the compiler execution strategy that you use, you still need to explicitly configure incremental compilation.
 
-## Enable incremental compilation
+### Enable incremental compilation
 
 To make your builds faster, you can enable incremental compilation by adding the `kotlin.compiler.incremental` property:
 
@@ -393,71 +267,9 @@ To make your builds faster, you can enable incremental compilation by adding the
 
 Alternatively, run your build with the `-Dkotlin.compiler.incremental=true` option.
 
-## Configure annotation processing
+### Specify compiler options
 
-See [`kapt` – Using in Maven](kapt.md#use-in-maven).
-
-## Create JAR file
-
-To create a small JAR file containing just the code from your module, include the following under `build->plugins`
-in your Maven `pom.xml` file, where `main.class` is defined as a property and points to the main Kotlin or Java class:
-
-```xml
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jar-plugin</artifactId>
-    <version>2.6</version>
-    <configuration>
-        <archive>
-            <manifest>
-                <addClasspath>true</addClasspath>
-                <mainClass>${main.class}</mainClass>
-            </manifest>
-        </archive>
-    </configuration>
-</plugin>
-```
-
-## Create a self-contained JAR file
-
-To create a self-contained JAR file containing the code from your module along with its dependencies, include the following
-under `build->plugins` in your Maven `pom.xml` file, where `main.class` is defined as a property and points to
-the main Kotlin or Java class:
-
-```xml
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-assembly-plugin</artifactId>
-    <version>2.6</version>
-    <executions>
-        <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals> <goal>single</goal> </goals>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>${main.class}</mainClass>
-                    </manifest>
-                </archive>
-                <descriptorRefs>
-                    <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
-```
-
-This self-contained JAR file can be passed directly to a JRE to run your application:
-
-``` bash
-java -jar target/mymodule-0.0.1-SNAPSHOT-jar-with-dependencies.jar
-```
-
-## Specify compiler options
-
-Additional options and arguments for the compiler can be specified as tags under the `<configuration>` element of the
+Additional options and arguments for the compiler can be specified as elements in the `<configuration>` section of the
 Maven plugin node:
 
 ```xml
@@ -489,7 +301,7 @@ Many of the options can also be configured through properties:
 
 The following attributes are supported:
 
-### Attributes specific to JVM
+#### Attributes specific to JVM
 
 | Name              | Property name                   | Description                                                                                          | Possible values                                         | Default value               |
 |-------------------|---------------------------------|------------------------------------------------------------------------------------------------------|---------------------------------------------------------|-----------------------------|
@@ -503,32 +315,62 @@ The following attributes are supported:
 | `jvmTarget`       | `kotlin.compiler.jvmTarget`     | Target version of the generated JVM bytecode                                                         | "1.8", "9", "10", ..., "25"                             | "%defaultJvmTargetVersion%" |
 | `jdkHome`         | `kotlin.compiler.jdkHome`       | Include a custom JDK from the specified location into the classpath instead of the default JAVA_HOME |                                                         |                             |
 
-## Use BOM
+## Package your project
 
-To use a Kotlin [Bill of Materials (BOM)](https://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#bill-of-materials-bom-poms), 
-write a dependency on [`kotlin-bom`](https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-bom):
+### Create JAR files
+
+To create a small JAR file containing just the code from your module, include the following under `<build><plugins>`
+in your Maven `pom.xml` file, where `main.class` is defined as a property and points to the main Kotlin or Java class:
 
 ```xml
-<dependencyManagement>
-    <dependencies>  
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-bom</artifactId>
-            <version>%kotlinVersion%</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-    </dependencies>
-</dependencyManagement>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>3.5.0</version>
+    <configuration>
+        <archive>
+            <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>${main.class}</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+</plugin>
 ```
 
-## Generate documentation
+### Create self-contained JAR files
 
-The standard Javadoc generation plugin (`maven-javadoc-plugin`) doesn't support Kotlin code. To generate documentation 
-for Kotlin projects, use [Dokka](https://github.com/Kotlin/dokka). Dokka supports mixed-language projects and can 
-generate output in multiple formats, including standard Javadoc. For more information about how to configure Dokka in
-your Maven project, see [Maven](dokka-maven.md).
+To create a self-contained JAR file containing the code from your module along with its dependencies, include the following
+under `<build><plugins>` in your Maven `pom.xml` file, where `main.class` is defined as a property and points to
+the main Kotlin or Java class:
 
-## Enable OSGi support
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>3.8.0</version>
+    <executions>
+        <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals> <goal>single</goal> </goals>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>${main.class}</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+```
 
-[Learn how to enable OSGi support in your Maven project](kotlin-osgi.md#maven).
+This self-contained JAR file can be passed directly to a JRE to run your application:
+
+``` bash
+java -jar target/mymodule-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+```
